--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "gravatar": "^1.8.2",
     "jimp": "^0.22.10",
     "joi": "^17.10.1",
@@ -22,7 +22,8 @@
     "mongoose": "^7.5.1",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "eslint": "7.19.0",
